# RKGK

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  setup.bat
src/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h
src/rendering/: frame_data.h  vk_descriptors.cpp  vk_engine.cpp  vk_engine.h  vk_utils.cpp  vk_utils.h
src/rendering/assimp/: AssimpModelParser.cpp  AssimpModelParser.h
src/rendering/passes/: RenderPass.h  SketchPass.cpp  SketchPass.h
